# emg-mobile-analyzer

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/model_test_app/: MainActivity.kt
assets/pico/: README.md  central.py  main.py
ios/: .gitignore
ios/Frameworks/: .gitignore
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_router.dart  bleWidget.dart  main.dart  theme.dart
lib/pages/: home.dart  homePage.dart
lib/shells/: templateShell.dart
lib/widgets/: ffi_sample.dart  ffi_test_calc.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  CmakeLists.txt
native/include/: calc.h
native/src/: calc.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
